# biopm

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
biopm/: __init__.py  data.py  evaluation.py  features.py  inference.py  model.py  preprocessing.py  pretraining.py
checkpoints/: README.md
examples/: classify_api.py  encode_one_batch.py  extract_features_api.py
scripts/: classify.py  extract_features.py  preprocess_mhealth.py  pretrain.py
tests/: test_smoke.py
