[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biopm"
version = "0.1.0"
description = "BioPM: a movement-element transformer for wearable accelerometer data."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "BioPM authors" }]
dependencies = [
    "torch>=1.10",
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "h5py>=3.0",
    "scikit-learn>=1.0",
    "tqdm>=4.60",
]

[tool.setuptools.packages.find]
include = ["biopm*"]
